2010-09-10  Cosmin Truta  <ctruta@chromium.org>

Reviewed by Nikolas Zimmermann.

        getBoundingClientRect Broken for SVG Elements
        https://bugs.webkit.org/show_bug.cgi?id=42815

        Added tests for getBoundingClientRect applied to SVG elements.

        * svg/custom/getBoundingClientRect.xhtml: Added
        * svg/custom/getBoundingClientRect-expected.txt: Added
2010-09-10  Cosmin Truta  <ctruta@chromium.org>

        Reviewed by Nikolas Zimmermann.

        getBoundingClientRect Broken for SVG Elements
        https://bugs.webkit.org/show_bug.cgi?id=42815

        Use getBBox to retrieve the bounding rectangle for SVG elements.

        Test: svg/dom/getBoundingClientRect.xhtml

        * dom/Element.cpp:
        (Element::getBoundingClientRect):

Canonical link: https://commits.webkit.org/57988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67252 268f45cc-cd09-0410-ab3c-d52691b4dbfc